<resources>
    <string name="app_name">PHR</string>
    <string name="sign_out">Sign Out</string>
    <string name="don_t_have_an_acount_yet_click_to_register">Don\'t have an acount yet, click to register</string>
    <string name="login">Login</string>
    <string name="loginimageview">\n</string>
    <string name="sign_in">Sign In</string>
    <string name="click_to_register">CLick To Register</string>
    <string name="email">Email</string>
    <string name="login_image_description">\nlogin_image_description\n</string>
    <string name="password">Password</string>
    <string name="login_image_descriptionn">login image description</string>
    <string name="test_name">test_name</string>
    <string name="attach_result">attach_result</string>
    <string name="add_test_result">add_test_result</string>
    <string name="doctor_name">doctor_name</string>
    <string name="location">location</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="add_appointment">add_appointment</string>
    <string name="medication_name">medication_name</string>
    <string name="dosage">dosage</string>
    <string name="frequency">frequency</string>
    <string name="add_medication">add_medication</string>
    <string name="appointment_date_hint">appointment_date_hint</string>
    <string name="appointment_time_hint">appointment_time_hint\n</string>
    <string name="welcome_to_my_medical_diary">Welcome to My Medical Diary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">settings</string>
    <string name="home">home</string>
    <string name="history">history</string>
    <string name="information">information</string>
    <string name="phr">PHR</string>
    <string name="welcome_to_your_medical_diary">welcome to your medical diary</string>
    <string name="search">search</string>
    <string name="title_note">Title</string>
    <string name="content_note">Content</string>
    <string name="save_note">Save</string>
    <string name="add_your_note">Add Your Note</string>
    <string name="select">select</string>
</resources>