<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/setting"
        android:title="@string/settings"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search"
        android:title="@string/search"
        android:orderInCategory="200"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_information"
        android:icon="@drawable/info"
        android:title="@string/information"
        android:orderInCategory="300"
        app:showAsAction="never" />
</menu>

