<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:orderInCategory="200"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_history"
        android:title="@string/history"
        android:orderInCategory="300"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_information"
        android:icon="@drawable/ic_information"
        android:title="@string/information"
        android:orderInCategory="400"
        app:showAsAction="never" />

</menu>


