<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/background7">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="Medication"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editTextMedicationName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/black"
        android:hint="@string/medication_name" />

    <EditText
        android:id="@+id/editTextMedicationDosage"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/black"
        android:hint="@string/dosage" />

    <EditText
        android:id="@+id/editTextMedicationFrequency"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/black"
        android:hint="@string/frequency" />

    <Button
        android:id="@+id/buttonAddMedication"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:backgroundTint="@color/semi_transparent_grey"
        android:textColor="@color/black"
        android:text="@string/add_medication" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/pillsdoc"
        android:gravity="center" />
</LinearLayout>
