<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@drawable/background1"
    android:layout_gravity="center"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="Appointments"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/docss" />


    <EditText
        android:id="@+id/editTextDoctorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/doctor_name"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/editTextAppointmentLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/editTextAppointmentDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/editTextAppointmentTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/time"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/black" />


    <Button
        android:id="@+id/buttonAddAppointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="add appointment"
        android:textColor="@color/black"
        android:backgroundTint="@color/semi_transparent_grey"/>
</LinearLayout>
